argorollout-canary/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
